force-app/main/default/objects/PartnerTierRuleCondition__c/PartnerTierRuleCondition__c.object-meta.xml
<CustomObject>
    <description>Atomic AND-condition row under a partner tier rule group.</description>
    <label>Partner Tier Rule Condition</label>
    <nameField>
        <displayFormat>PTRC-{00000}</displayFormat>
        <label>Rule Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Tier Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>