force-app/main/default/objects/PartnerTierRuleCondition__c/fields/Condition_Order__c.field-meta.xml
<CustomField>
    <fullName>Condition_Order__c</fullName>
    <description>Evaluation order for AND conditions inside one group.</description>
    <label>Condition Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>