force-app/main/default/objects/PartnerTierRuleCondition__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>LoyaltyProgramMember field API name to evaluate.</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>