force-app/main/default/objects/PartnerTierRuleCondition__c/fields/MaximumEligibleBalance__c.field-meta.xml
<CustomField>
    <fullName>MaximumEligibleBalance__c</fullName>
    <description>Maximum loyalty balance allowed for this condition row.</description>
    <label>MaximumEligibleBalance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>