force-app/main/default/objects/PartnerTierRuleCondition__c/fields/MinimumEligibleBalance__c.field-meta.xml
<CustomField>
    <fullName>MinimumEligibleBalance__c</fullName>
    <description>Minimum loyalty balance required for this condition row.</description>
    <label>MinimumEligibleBalance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>