force-app/main/default/objects/PartnerTierRuleCondition__c/fields/Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>Rule_Group__c</fullName>
    <description>Parent OR group record.</description>
    <label>Rule Group</label>
    <referenceTo>PartnerTierRuleGroup__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>