force-app/main/default/objects/PartnerTierRuleCondition__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <description>Numeric threshold used by the operator comparison.</description>
    <label>Threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>